--- a/shop/templates/deskripsiBarang.html
+++ b/shop/templates/deskripsiBarang.html
@@ -1,6 +1,10 @@
 {% extends "navbar.html" %}
 
 {% block content %}
+<script
+    src="https://code.jquery.com/jquery-3.4.1.js"
+    integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+    crossorigin="anonymous"></script>
 <div class="container" style="margin-top: 2%;">
     <div class="row">
         <div class="col-8">
@@ -14,7 +18,7 @@
             </a>
         </div>
         <div class="col-2">
-            <button type="button" class="btn btn-outline-dark" style="float: right;" data-toggle="modal" data-target="#keranjangModal">
+            <button type="button" class="btn btn-outline-dark" style="float: right;" onclick="modalKeranjang()" data-toggle="modal" data-target="#keranjangModal">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart2" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
                 </svg>
@@ -29,7 +33,7 @@
                     <img src="{{ data.urlFoto }}" class="card-img-top">
                     <div class="card-body">
                         <div class="text-right">    
-                            <a href="">
+                            <a href="javascript:tambahBarangKeranjang({{ data.idBarang }});">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-plus" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
                                     <path fill-rule="evenodd" d="M8.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 .5-.5z"/>
@@ -74,4 +78,22 @@
 
     {% include 'keranjangModal.html' %}
     {% include 'pengirimanModal.html' %}
+
+    <script>
+        function tambahBarangKeranjang(idBarang) {
+            $.ajax({
+                type : "POST",
+                url : "/shop/tambah_barang_keranjang/",
+                data : {
+                    'idBarang' : idBarang
+                },
+                success : function(result) {
+                    alert(result['nama'] + " berhasil dimasukkan ke keranjang!")
+                },
+                error : function() {
+                    alert("Barang gagal dimasukkan ke keranjang. Harap coba lagi setelah beberapa saat.")
+                }
+            })
+        }
+    </script>
 {% endblock%}
