--- a/shop/templates/pengirimanModal.html
+++ b/shop/templates/pengirimanModal.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col">
                     <b>Alamat</b>
-                    <p>Universitas Indonesia, Jalan Margonda Raya, Depok, Jawa Barat</p>
+                    <p id="alamatCO">Universitas Indonesia, Jalan Margonda Raya, Depok, Jawa Barat</p>
                 </div>
             </div>
             <hr>
@@ -20,25 +20,18 @@
                 <div class="col-1">Qty</div>
                 <div class="col-5 col-sm-3">Subtotal</div>
             </div>
-            <div class="row">
-                <div class="col-6 col-sm-8">
-                    <span>Tumblr</span>
-                    <span class="hargaKeranjang">[Rp 200.000]</span>
+            <div id="barangCO">
+                <div class="row">
+                    <div class="col-6 col-sm-8">
+                        <span>Tumblr</span>
+                    </div>
+                    <div class="col-1">1</div>
+                    <div class="col-5 col-sm-3">Rp 400.000</div>
                 </div>
-                <div class="col-1">2</div>
-                <div class="col-5 col-sm-3">Rp 400.000</div>
-            </div>
-            <div class="row">
-                <div class="col-6 col-sm-8">
-                    <span>Cutlery Bamboo Set</span>
-                    <span class="hargaKeranjang">[Rp 65.000]</span>
-                </div>
-                <div class="col-1">1</div>
-                <div class="col-5 col-sm-3">Rp 65.000</div>
             </div>
             <hr>
             <div class="row">
-                <div class="col-9">
+                <div class="col-7 col-sm-9">
                     <span><b>Pilih metode pengiriman</b>:</span>
                 </div>
                 <div class="col-5 col-sm-3">
@@ -48,12 +41,12 @@
             <div class="row">
                 <div class="col-5">
                     <select class="form-control custom-select" id="metodePengiriman">
-                        <option value="ekm">Ekonomis</option>
-                        <option value="std">Standard</option>
-                        <option value="ekp">Ekspres</option>
+                        <option value="Ekonomis">Ekonomis</option>
+                        <option value="Standard">Standard</option>
+                        <option value="Ekspres">Ekspres</option>
                     </select>
                 </div>
-                <div class="col-4"></div>
+                <div class="col-2 col-sm-4"></div>
                 <div class="col-5 col-sm-3">
                     <span id="ongkir"></span>
                 </div>
@@ -63,34 +56,95 @@
                 <div class="col-6 col-sm-8" style="text-align: right; font-weight: 700;">
                     <span>Total</span>
                 </div>
-                <div class="col-1">3</div>
-                <div class="col-5 col-sm-3">Rp 465.000</div>
+                <div class="col-1" id="qtyTotalCO">3</div>
+                <div class="col-5 col-sm-3">Rp <span id="totalHargaCO">465.000</span></div>
             </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal" data-toggle="modal" data-target="#keranjangModal">Kembali</button>
-          <a href="{% url 'shop:checkout' %}">
-              <button type="button" class="btn btn-primary">Lanjut ke pembayaran</button>
-          </a>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" data-toggle="modal" data-target="#keranjangModal">Kembali</button>
+            <button type="button" class="btn btn-primary" onclick="createTrx()">Lanjut ke pembayaran</button>
         </div>
       </div>
     </div>
   </div>
 
   <script>
+        function setTotal(total) {
+            $("#totalHargaCO").empty();
+            $("#totalHargaCO").append(total);
+        }
         $("#metodePengiriman").mouseup(function() {
             var metode = document.getElementById("metodePengiriman").value;
             var ongkir = document.getElementById("ongkir");
             switch (metode) {
-                case "ekm":
-                    ongkir.innerText = "Rp 10.000"
+                case "Ekonomis":
+                    ongkir.innerText = "Rp 10000";
+                    setTotal(parseInt(TOTAL) + 10000);
                     break;
-                case "std":
-                    ongkir.innerText = "Rp 30.000"
+                case "Standard":
+                    ongkir.innerText = "Rp 30000";
+                    setTotal(parseInt(TOTAL) + 30000);
                     break;
-                case "ekp":
-                    ongkir.innerText = "Rp 50.000"
+                case "Ekspres":
+                    ongkir.innerText = "Rp 50000";
+                    setTotal(parseInt(TOTAL) + 50000);
                     break;
             }
         })
+        function modalCheckout() {
+            $.ajax({
+                type : "GET",
+                url : "/shop/modal_checkout/",
+                success : function(result) {
+                    $("#barangCO").empty();
+                    for (let i = 1; i <= result['count']; i++) {
+                        var barang = result[i];
+                        var barang_entry = '<div class="row"><div class="col-6 col-sm-8"><span>' + barang['nama'] + '</span></div><div class="col-1">1</div><div class="col-5 col-sm-3">Rp ' + barang['harga'] + '</div></div>';
+                        $("#barangCO").append(barang_entry);
+                    }
+                    
+                    $("#alamatCO").empty();
+                    $("#alamatCO").append(result['alamat']);
+                    $("#qtyTotalCO").empty();
+                    $("#qtyTotalCO").append(result['count']);
+                    $("#totalHargaCO").empty();
+                    $("#totalHargaCO").append(result['total']);
+                    TOTAL = result['total'];
+                },
+                error : function() {
+                    alert("Gagal mendapatkan informasi keranjang.");
+                }
+            })
+        }
+        function createTrx() {
+            var metode = document.getElementById("metodePengiriman").value;
+            var total;
+            switch (metode) {
+                case "Ekonomis":
+                    total = TOTAL + 10000;
+                    break;
+                case "Standard":
+                    total = TOTAL + 30000;
+                    break;
+                case "Ekspres":
+                    total = TOTAL + 50000;
+                    break;
+            }
+            $.ajax({
+                type : "POST",
+                url : "/shop/create_transaksi/",
+                data : {
+                    'total' : total,
+                    'metode' : metode
+                },
+                success : function(result) {
+                    var id = result['id'];
+                    alert(id.toString());
+                    location.replace("{% url 'shop:checkout' id=99999 %}".replace("99999", id.toString()));
+                },
+                error : function() {
+                    alert("Gagal membuat transaksi. Silakan coba kembali setelah beberapa saat.");
+                }
+            })
+        }
   </script>
