--- a/shop/templates/riwayatModal.html
+++ b/shop/templates/riwayatModal.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="riwayatModalLabel">Transaksi #x</h5>
+          <h5 class="modal-title" id="riwayatModalLabel">Transaksi #<span id="idTrx">x</span></h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col">
                     <b>Status</b>
-                    <p>Sedang Dikirim</p>
+                    <p id="status">Sedang Dikirim</p>
                 </div>
             </div>
             <hr>
@@ -20,21 +20,15 @@
                 <div class="col-1">Qty</div>
                 <div class="col-5 col-sm-3">Subtotal</div>
             </div>
-            <div class="row">
-                <div class="col-6 col-sm-8">
-                    <span>Tumblr</span>
-                    <span class="hargaKeranjang">[Rp 200.000]</span>
+            <div id="barangRiwayat">
+                <div class="row">
+                    <div class="col-6 col-sm-8">
+                        <span>Tumblr</span>
+                        <span class="hargaKeranjang">[Rp 200.000]</span>
+                    </div>
+                    <div class="col-1">2</div>
+                    <div class="col-5 col-sm-3">Rp 400.000</div>
                 </div>
-                <div class="col-1">2</div>
-                <div class="col-5 col-sm-3">Rp 400.000</div>
-            </div>
-            <div class="row">
-                <div class="col-6 col-sm-8">
-                    <span>Cutlery Bamboo Set</span>
-                    <span class="hargaKeranjang">[Rp 65.000]</span>
-                </div>
-                <div class="col-1">1</div>
-                <div class="col-5 col-sm-3">Rp 65.000</div>
             </div>
             <hr>
             <div class="row">
@@ -47,11 +41,11 @@
             </div>  
             <div class="row">
                 <div class="col-5">
-                    <span>Standard</span>
+                    <span id="metodePengiriman">Standard</span>
                 </div>
-                <div class="col-4"></div>
+                <div class="col-2 col-sm-4"></div>
                 <div class="col-5 col-sm-3">
-                    <span id="ongkir">30.000</span>
+                    Rp <span id="ongkir">30.000</span>
                 </div>
             </div>
             <hr>
@@ -59,8 +53,8 @@
                 <div class="col-6 col-sm-8" style="text-align: right; font-weight: 700;">
                     <span>Total</span>
                 </div>
-                <div class="col-1">3</div>
-                <div class="col-5 col-sm-3">Rp 465.000</div>
+                <div class="col-1" id="qtyTotalRiwayat">3</div>
+                <div class="col-5 col-sm-3">Rp <span id="totalHargaRiwayat">465000</span></div>
             </div>
         </div>
         <div class="modal-footer">
@@ -69,3 +63,40 @@
       </div>
     </div>
   </div>
+
+<script>
+    function detailRiwayatModal(id) {
+        $.ajax({
+            type : "GET",
+            url : "/shop/modal_riwayat/",
+            data : {
+                'id':id
+            },
+            success : function(result) {
+                $("#idTrx").empty();
+                $("#idTrx").append(result['id']);
+                $("#status").empty();
+                $("#status").append(result['status']);
+
+                $("#barangRiwayat").empty();
+                for (let i = 1; i <= result['count']; i++) {
+                    var barang = result[i];
+                    var barang_entry = '<div class="row"><div class="col-6 col-sm-8"><span>' + barang['nama'] + '</span><span class="hargaKeranjang">[Rp ' + barang['harga'] + ']</span></div><div class="col-1">' + barang['qty'] + '</div><div class="col-5 col-sm-3">Rp ' + barang['subtotal'] + '</div></div>';
+                    $("#barangRiwayat").append(barang_entry);
+                }
+
+                $("#metodePengiriman").empty();
+                $("#metodePengiriman").append(result['metode']);
+                $("#ongkir").empty();
+                $("#ongkir").append(result['ongkir']);
+                $("#qtyTotalRiwayat").empty();
+                $("#qtyTotalRiwayat").append(result['count']);
+                $("#totalHargaRiwayat").empty();
+                $("#totalHargaRiwayat").append(result['total']);
+            },
+            error : function() {
+                alert("Gagal mendapatkan informasi rincian transaksi. Silakan coba kembali setelah beberapa saat.");
+            }
+        })
+    }
+</script>
