--- a/shop/templates/shoppage.html
+++ b/shop/templates/shoppage.html
@@ -38,6 +38,7 @@
             <div class="col-8">
                 <h1 style="font-family: 'Caveat', cursive;">Zero Waste Shop</h1>
             </div>
+            {% if keranjang %}
             <div class="col-2">
                 <a href="{% url 'shop:riwayat' %}">
                     <button type="button" class="btn btn-outline-dark" style="float: right;">
@@ -53,6 +54,7 @@
                     Keranjang
                 </button>
             </div>
+            {% endif %}
         </div>
         <div class="row row-cols-2 row-cols-sm-4" style="margin-top: 1%;">
           {% for item in data %}
